Fix h1 location on mobile

--- a/static/sourcecatcher.css
+++ b/static/sourcecatcher.css
@@ -302,7 +302,10 @@ ul.users_list {
   h1 {
     font-size: 10vw;
     text-align: center;
-    position: relative;
+    top: 50%;
+    left: 50%;
+    -ms-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
   }
 
   .main {
